# ComposableGA

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: StaticAnalyzers.cmake
cmake/in/: evvyConfig.cmake.in
cmake/modules/: StaticAnalyzers.cmake
examples/: CMakeLists.txt  MixedParamTypes.cpp  RandBenchmark.cpp  Rosenbrock.cpp
include/: DefaultGA.h  GA.h  Parameter.h
include/strategies/: DefaultCrossover.h  DefaultEvaluator.h  DefaultInitialSolutionGenerator.h  DefaultMutator.h  K_TournamentParentSelector.h
src/: CMakeLists.txt  DefaultGA.cpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  OptimizationProblem.cpp  OptimizationProblem.hpp  Parameter.cpp  main.cpp
src/evvy/: Pipeline.h
src/evvy/crossover/: Crossover.h  IndependentParameterCrossover.h
src/evvy/crossover/strategies/: TwoPointCrossover.h
src/evvy/evaluation/: Evaluate.h
src/evvy/mutation/: IndependentParameterMutation.h  Mutation.h  MutatorFunctions.h
src/evvy/rng/: FastIndexRng.h  IntMult.h  StdProbabilityRng.h  xoshiro256ss.h
src/evvy/rng/prng/: Jsf32.h
src/evvy/selection/: TournamentSelection.h
src/evvy/stop_condition/: StopAfter.h
src/evvy/util/: AggregateSwap.h  CompileTimeSize.h  ConstantProbability.h  GetSize.h  TupleLike.h
src/evvy/util/concepts/: IndexableRange.h  IntType.h  ValueMatching.h
src/evy/: Pipeline.h  Pipeline.hpp
src/evy/crossover/: Crossover.h  Crossover.hpp
src/evy/crossover/strategies/: TwoPointCrossover.h  TwoPointCrossover.hpp
src/evy/evaluation/: Evaluate.h  Evaluate.hpp
src/evy/mutation/: Mutation.h  Mutation.hpp  MutatorFunctions.h  MutatorFunctions.hpp
src/evy/mutation/strategy/: IndependentMutation.h  IndependentMutation.hpp
src/evy/rng/: FastIndexRng.h  FastIndexRng.hpp  StdProbabilityRng.hpp
src/evy/rng/distributions/: IntMult.hpp
src/evy/rng/prng/: Jsf32.hpp  xoshiro256ss.h  xoshiro256ss.hpp
src/evy/selection/: TournamentSelection.h  TournamentSelection.hpp
src/evy/stop_condition/: StopAfter.h  StopAfter.hpp
src/evy/util/: AggregateSwap.h  AggregateSwap.hpp  ConditionallyApplyFunctions.hpp  ConstantProbability.hpp  GetSize.h  GetSize.hpp
src/evy/util/concepts/: IndexableRange.hpp  IntType.hpp  TupleLike.hpp  ValueMatching.hpp
src/strategies/: DefaultCrossover.cpp  DefaultEvaluator.cpp  DefaultInitialSolutionGenerator.cpp  DefaultMutator.cpp  K_TournamentParentSelector.cpp
src2/: CMakeLists.txt  GA.h  Parameter.h  main.cpp
src2/strategies/: DefaultCrossover.h  DefaultEvaluator.h  DefaultInitialSolutionGenerator.h  DefaultMutator.h  DefaultParentSelector.h  K_TournamentParentSelector.h
test/: CMakeLists.txt  integration_test.cpp  opti_problem_test.cpp
